2002-08-02  Ivan Kohler <ivan-frontier-rpc@420.am>

	* lib/Frontier/RPC2.pm: added repr subroutine for String datatype
	so that an explicity-specified String type encodes < > & and "

	* MANIFEST: added docs/make-rel

2002-08-02  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* docs/make-rel: added

	* README: changed mirror location to SourceForge; added notes for
 	Apache::XMLRPC and Frontier::Responder.

2001-04-25  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* lib/Frontier/Daemon.pm (new): return $self; submitted by Aaron
	E. Ross <ross@coreference.com>

2001-04-23  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* docs/changes.xml, docs/changes.xsl: added

	* COPYING: updated to clarify "same terms as Perl"

	* README: note that some required modules are now included in Perl
	distribution.

2001-04-09  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* lib/Frontier/RPC2.pm: change all $self to $expat in XML::Parser
	callbacks; noted by Terry Triplett

2001-01-26  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* MANIFEST: add lib/Frontier/Responder.pm

2000-11-08  Ken MacLeod  <ken@localhost.localdomain>

	* lib/Frontier/RPC2.pm: for base64(), note that user must use
	MIME::Base64; noted by Marc Singer <elf@buici.com>

	* lib/Frontier/Responder.pm: added; submitted by Joe Johnston
	<jjohn@oreilly.com>

	* lib/Apache/XMLRPC.pm: added POD and tweaks; submitted by Tim
	Peoples <tep@colltech.com>

2000-09-27  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* lib/Frontier/Daemon.pm (new): add use_objects

	* lib/Frontier/RPC2.pm (decode): copy use_objects to new parser
	(die, init, start, end, char, final): change $self to $expat to
	make clear what's going on
	(_item): serialize blessed array and hash references as <array>
	and <struct>s

2000-09-26  Ken MacLeod  <ken@bitsko.slc.ut.us>

	* lib/Frontier/RPC2.pm (end): support <int> as a 'use_objects'
	value

2000-06-01  Ken MacLeod  <ken@localhost.localdomain>

	* examples/validator1-daemon.pl: added

	* lib/Frontier/RPC2.pm (boolean, double, int): added type checking