@@ -2,7 +2,6 @@ COPYING
 ChangeLog
 Changes
 Frontier-RPC.spec
-Frontier-RPC-0.07b4.spec
 MANIFEST
 Makefile.PL
 README
