@@ -13,6 +13,7 @@
 	Nick Bauman, Laurent Bossavit, Sean Brown, Jon Frisby,
    Ed Hill, Joe Johnston, Skip Montanaro, Tim Peoples, John Posner,
        Aaron Ross, Bas Schulte, Marc Singer, and Terry Triplett
+                (Unofficial patch from Jeff Buchbinder)
 
 INTRODUCTION
 
