@@ -1,3 +1,8 @@
+2007-04-30  Jeff Buchbinder <jeff@freemedsoftware.org>
+
+	* lib/Frontier/Client.pm: Client-side basic authentication
+	capability, from FreeMED patch.
+
 2002-08-02  Ivan Kohler <ivan-frontier-rpc@420.am>
 
 	* lib/Frontier/RPC2.pm: added repr subroutine for String datatype
